# Rin

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/rin/: MainActivity.kt  RinLib.kt  TerminalView.kt
android/app/src/main/kotlin/com/rin/rpkg/: RpkgLib.kt
android/app/src/main/kotlin/com/rin/ui/components/: ExtraKeysBar.kt  TerminalSurface.kt
android/app/src/main/kotlin/com/rin/ui/screen/: SetupScreen.kt  TerminalScreen.kt
android/app/src/main/kotlin/com/rin/ui/theme/: Color.kt  TerminalColors.kt  Theme.kt  Type.kt
examples/: demo.rs  interactive.rs  shell.rs  tui.rs
rpkg/: Cargo.toml
rpkg/src/: android.rs  extract.rs  index.rs  lib.rs  manager.rs  resolver.rs  types.rs
src/: android.rs  lib.rs  pty.rs  tests.rs
src/core/: buffer.rs  cell.rs  grid.rs  mod.rs
src/input/: handler.rs  mod.rs
src/parser/: ansi.rs  mod.rs
src/renderer/: mod.rs  screen.rs
