[package]
name = "rin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
vte = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional features
tokio = { version = "1.48", features = ["sync", "rt"], optional = true }
portable-pty = { version = "0.9", optional = true }

[features]
default = []
async = ["tokio"]
android = []
pty = ["portable-pty"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[example]]
name = "shell"
required-features = ["pty"]
