[package]
name = "rpkg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
ureq = { version = "3.2.0", features = ["gzip"] }

flate2 = "1.0"
ar = "0.9"
tar = "0.4.44"
xz2 = "0.1"
zstd = "0.13"

jni = { version = "0.22", optional = true }
goblin = "0.10.5"

[features]
default = []
android = ["dep:jni"]
